{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 300,
  "lineage": "51b20623-3cc2-8b80-403d-aedd200bdb2d",
  "resources": [
    {
      "module": "module.amazon_mq",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rmq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:security-group/sg-03a0dcaa8cd3f3c9b",
            "description": "Security group for Rabbit MQ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a0dcaa8cd3f3c9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5671,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5671
              }
            ],
            "name": "sohnandsol-rmqSG",
            "name_prefix": "",
            "owner_id": "652633463499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sohnandsol-rmqSG"
            },
            "tags_all": {
              "Name": "sohnandsol-rmqSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:network-acl/acl-036159ba492234a4a",
            "default_network_acl_id": "acl-036159ba492234a4a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-036159ba492234a4a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "652633463499",
            "subnet_ids": [
              "subnet-00a76fffd07a2cf97",
              "subnet-01538844ef8b80b57",
              "subnet-0662349f9cf84bb22",
              "subnet-0ad827eb756e8ecc6"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:route-table/rtb-021f6d4b8a5b831c8",
            "default_route_table_id": "rtb-021f6d4b8a5b831c8",
            "id": "rtb-021f6d4b8a5b831c8",
            "owner_id": "652633463499",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:security-group/sg-07d15faa51d237514",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07d15faa51d237514",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "652633463499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c1dc5c3297231d2",
            "domain": "vpc",
            "id": "eipalloc-03c1dc5c3297231d2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-214-230.compute-1.amazonaws.com",
            "public_ip": "44.221.214.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f44c4ac6bbf56fa",
            "domain": "vpc",
            "id": "eipalloc-06f44c4ac6bbf56fa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-99-216.compute-1.amazonaws.com",
            "public_ip": "3.223.99.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:internet-gateway/igw-04ec068b51d0db076",
            "id": "igw-04ec068b51d0db076",
            "owner_id": "652633463499",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c1dc5c3297231d2",
            "association_id": "eipassoc-036c70b0e2cd177b3",
            "connectivity_type": "public",
            "id": "nat-05bfbf3731223d4c2",
            "network_interface_id": "eni-0c5dc573d4615a6ae",
            "private_ip": "10.0.101.41",
            "public_ip": "44.221.214.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a76fffd07a2cf97",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f44c4ac6bbf56fa",
            "association_id": "eipassoc-0753b7948c817b010",
            "connectivity_type": "public",
            "id": "nat-066f3c8bcbcf8a943",
            "network_interface_id": "eni-08850b85765c6a7ed",
            "private_ip": "10.0.102.83",
            "public_ip": "3.223.99.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01538844ef8b80b57",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-069221cf26a8d22941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05bfbf3731223d4c2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069221cf26a8d2294",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d35b8fa8c771fb461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-066f3c8bcbcf8a943",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d35b8fa8c771fb46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ec068b51d0db076",
            "id": "r-rtb-022515a616d9ced131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022515a616d9ced13",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:route-table/rtb-069221cf26a8d2294",
            "id": "rtb-069221cf26a8d2294",
            "owner_id": "652633463499",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:route-table/rtb-0d35b8fa8c771fb46",
            "id": "rtb-0d35b8fa8c771fb46",
            "owner_id": "652633463499",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:route-table/rtb-022515a616d9ced13",
            "id": "rtb-022515a616d9ced13",
            "owner_id": "652633463499",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bcfabae3a8bdfbc",
            "route_table_id": "rtb-069221cf26a8d2294",
            "subnet_id": "subnet-0662349f9cf84bb22"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05594f23d8057e388",
            "route_table_id": "rtb-0d35b8fa8c771fb46",
            "subnet_id": "subnet-0ad827eb756e8ecc6"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098c64f1d1adbbffc",
            "route_table_id": "rtb-022515a616d9ced13",
            "subnet_id": "subnet-00a76fffd07a2cf97"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f193345f275064ff",
            "route_table_id": "rtb-022515a616d9ced13",
            "subnet_id": "subnet-01538844ef8b80b57"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:subnet/subnet-0662349f9cf84bb22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0662349f9cf84bb22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652633463499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:subnet/subnet-0ad827eb756e8ecc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad827eb756e8ecc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652633463499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:subnet/subnet-00a76fffd07a2cf97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a76fffd07a2cf97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652633463499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:subnet/subnet-01538844ef8b80b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01538844ef8b80b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652633463499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038a49bc471ddf048"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652633463499:vpc/vpc-038a49bc471ddf048",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036159ba492234a4a",
            "default_route_table_id": "rtb-021f6d4b8a5b831c8",
            "default_security_group_id": "sg-07d15faa51d237514",
            "dhcp_options_id": "dopt-00b06bd9928cdd152",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038a49bc471ddf048",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021f6d4b8a5b831c8",
            "owner_id": "652633463499",
            "tags": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "sohnandsol-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}